Added to the css file to give the page more control

--- a/index.html
+++ b/index.html
@@ -8,27 +8,84 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header_logo">Header Logo</div>
-    <nav>
-      <div class="header-links">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Login</a>
-        <a href="#">Sign Up</a>
+    <div class="container">
+      <div class="header-container">
+        <h1 class="header_logo">Header Logo</h1>
+        <nav>
+          <div class="header-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Login</a>
+            <a href="#">Sign Up</a>
+          </div>
+        </nav>
       </div>
-    </nav>
-    <div class="hero">
-      <h1>This website is awesome</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-        laboriosam odit, incidunt laudantium, iusto quasi tenetur autem quo
-        provident blanditiis repudiandae hic praesentium quisquam vero.
-      </p>
-      <button class="learn_more">Learn More</button>
+      <div class="hero">
+        <div class="left-hero">
+          <h1>This website is awesome</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
+            laboriosam odit, incidunt laudantium, iusto quasi tenetur autem quo
+            provident blanditiis repudiandae hic praesentium quisquam vero.
+          </p>
+          <button class="learn_more" type="button">Learn More</button>
+        </div>
+
+        <div class="right-hero">
+          <img
+            class="hero-img"
+            src="./images/raoul-droog-yMSecCHsIBc-unsplash.jpg"
+            alt="Cat"
+          />
+        </div>
+      </div>
     </div>
-    <div class="hero-img">
-      <img src="./images/raoul-droog-yMSecCHsIBc-unsplash.jpg" />
+    <!-- Seperator -->
+
+    <div class="main-content">
+      <h2 class="japan-main">Japan</h2>
+      <div class="images-container">
+        <div class="image">
+          <img
+            class="japan-image"
+            src="/images/Japan.jpg"
+            alt="Image of Japan"
+          />
+          <div class="image-text">This is Japan</div>
+        </div>
+        <div class="image">
+          <img
+            class="japan-image"
+            src="/images/Japan2.jpg"
+            alt="Image of Japan"
+          />
+          <div class="image-text">This is Japan</div>
+        </div>
+        <div class="image">
+          <img
+            class="japan-image"
+            src="/images/Japan3.jpg"
+            alt="Image of Japan"
+          />
+          <div class="image-text">This is Japan</div>
+        </div>
+        <div class="image">
+          <img
+            class="japan-image"
+            src="/images/Japan4.jpg"
+            alt="Image of Japan"
+          />
+          <div class="image-text">This is Japan</div>
+        </div>
+      </div>
+    </div>
+    <div class="quote-container">
+      <p>
+        "Growth occurs when one goes beyond one's limits. Realizing that is also
+        part of training"
+      </p>
+      <p>- Itachi Uchiha</p>
     </div>
   </body>
 </html>
